# gambit

./: .gitignore  README.md  TUTORIAL.ipynb  requirements.txt  setup.cfg  setup.py
gambit/: __init__.py  main.py
gambit/algorithms/: bird.py  gambit.py  simple.py
