[metadata]
name = gambit-disambig
version = 1.0.5
author = Christoph Gote
author_email = cgote@ethz.ch
license = AGPL-3.0+
description = An Open Source name disambiguation tool for version control systems
keywords =
    alias disambiguation
    repository mining
    version control system
url = https://github.com/gotec/gambi
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas>=2.2.2
    unidecode>=1.3.8
    python-levenshtein>=0.25.1
    pyjarowinkler>=1.8
    tqdm>=4.27.0
    numpy>=2.0.0
